--- a/style.css
+++ b/style.css
@@ -22,9 +22,9 @@
     font-style: normal;
   }
   
-  .fs-6 {
+  /* .fs-6 {
     font-size: 0.5rem !important;
-}
+} */
 
 ul {
     list-style-type: none;
